--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -142,13 +142,11 @@ ft
 \newpage
 # `r Tealeaves_parameters_legend `
 
-See [here](https://github.com/EcoClimLab/vertical-thermal-review/commit/3f624a119d72d388c707d21fb20666a2ad31848f#commitcomment-55784918) for rows to include.
-
 ```{r eval = TRUE, echo=FALSE, warning=FALSE}
 library(flextable)
 set_flextable_defaults(font.family = "Arial", font.size = 9)
-parameters_table <- read.csv("NEON_height_profiles/HARV_neon_stats.csv", stringsAsFactors = FALSE, check.names = FALSE)
-parameters_table <- parameters_table[c(9, 1, 3, 5)] #select and order columns for inclusion
+parameters_table <- read.csv("NEON_height_profiles/HARV_neon_stats_handedit.csv", stringsAsFactors = FALSE, check.names = FALSE)
+parameters_table <- parameters_table[which(parameters_table$include==1),c(9, 1, 3)] #select and order columns for inclusion
 ft <- flextable(parameters_table)
 ft <- autofit(ft)
 ft
