a bit oof cleanup, added TOC

--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -1,6 +1,9 @@
 ---
-title: 'Supporting Information'
-output: word_document
+title: 'Supporting Information: Thermal sensitivity across forest vertical profiles: patterns, mechanisms, and ecological implications'
+output:
+  word_document:
+    toc: true
+    toc_depth: 2
 bibliography: Zotero_references.bib
 csl: new-phytologist.csl 
 
@@ -56,26 +59,7 @@ SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological c
 ```
 
 
-**Title:** Thermal sensitivity across forest vertical profiles: patterns, mechanisms, and ecological implications
-
-**Authors:** 
-Nidhi Vinod^1^,
-Martijn Slot^2^,
-Ian McGregor^3^,
-Elsa M. Ordway^4^,
-Marielle N. Smith^5^,
-Tyeen Taylor,
-Lawren Sack,
-Kristina J. Anderson-Teixeira^1,2^* 
-
 \newpage
-
-S1 Note:
-
-It is noteworthy that leaf and branch temperatures often differ substantially. For instance, exposed tropical tree bark can be much warmer than leaves [@pauTropicalForestTemperature2018; @stillImagingCanopyTemperature2021; @johnstonWhatLiesVertical2020]. 
-Thus, vegetation temperature ($T_{veg}$) measured using sensors that integrate across both leaves and woody vegetation (e.g., infrared sensors for $T_{veg}$ at NEON sites, Fig. `r fig_NEON_vertical`h) does not always equal $T_{leaf}$, particularly in settings where leaf area is low relative to woody vegetation (*i.e.*, low-LAI ecosystems and understories). 
-Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021; @macleanMicroclimcMechanisticModel2021]
-
 
 #  `r appendix_NEON_methods_title`
 
